fix scenario constructor call